tests/snapshots/integration__integration_tests__merge__readme_example_complex.snap
---
source: tests/integration_tests/merge.rs
info:
  program: wt
  args:
    - merge
    - main
    - "--force"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: /dev/null
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    PATH: "/private/var/folders/wf/s6ycxvvs4ln8qsdbfx40hnc40000gn/T/.tmp6wrGds/test-repo/.bin:/opt/homebrew/bin:/opt/homebrew/sbin:/usr/local/bin:/usr/bin:/bin:/usr/sbin:/sbin"
    SOURCE_DATE_EPOCH: "1761609600"
    WORKTRUNK_CONFIG_PATH: /var/folders/wf/s6ycxvvs4ln8qsdbfx40hnc40000gn/T/.tmp6wrGds/test-config.toml
---
success: true
exit_code: 0
----- stdout -----
🔄 [36mSquashing 3 commits into 1[0m (3 files, [32m+3[0m)...
🔄 [36mGenerating squash commit message...[0m
[40m [0m  [1mfeat(auth): Implement JWT authentication system[0m
[40m [0m  
[40m [0m  Add comprehensive JWT token handling including validation, refresh logic,
[40m [0m  and authentication tests. This establishes the foundation for secure
[40m [0m  API authentication.
[40m [0m  
[40m [0m  - Implement token refresh mechanism with expiry handling
[40m [0m  - Add JWT encoding/decoding with signature verification
[40m [0m  - Create test suite covering all authentication flows
✅ [32mSquashed @ [2m[SHA][0m
🔄 [36mRunning pre-merge: [1mtest[0m:[0m
[40m [0m  [1m[34mcargo[0m test[0m
🔄 [36mRunning pre-merge: [1mlint[0m:[0m
[40m [0m  [1m[34mcargo[0m clippy[0m
🔄 [36mMerging 1 commit to [1m[36mmain[0m @ [2m[SHA][0m (no rebase needed)

🔄 * [SHA][33m ([m[1;36mHEAD[m[33m -> [m[1;32mfeature-auth[m[33m)[m feat(auth): Implement JWT authentication system

🔄  auth.rs      | 1 [32m+[m
 auth_test.rs | 1 [32m+[m
 jwt.rs       | 1 [32m+[m
 3 files changed, 3 insertions(+)

✅ [32mMerged to [1m[32mmain[0m[0m (1 commit, 3 files, [32m+3[0m)
✅ [32mReturned to primary at [1m[32m[REPO][0m[0m
🔄 [36mRemoving worktree & branch...[0m
🔄 [36mRunning post-merge: [1minstall[0m:[0m
[40m [0m  [1m[34mcargo[0m install [36m--path[0m .[0m

----- stderr -----
[0m    Finished test [unoptimized + debuginfo] target(s) in 0.12s
     Running unittests src/lib.rs (target/debug/deps/worktrunk-abc123)

running 18 tests
test auth::tests::test_jwt_decode ... ok
test auth::tests::test_jwt_encode ... ok
test auth::tests::test_token_refresh ... ok
test auth::tests::test_token_validation ... ok

test result: ok. 18 passed; 0 failed; 0 ignored; 0 measured; 0 filtered out; finished in 0.08s
[0m    Checking worktrunk v0.1.0
    Finished dev [unoptimized + debuginfo] target(s) in 1.23s
[0m  Installing worktrunk v0.1.0
   Compiling worktrunk v0.1.0
    Finished release [optimized] target(s) in 2.34s
  Installing ~/.cargo/bin/wt
   Installed package `worktrunk v0.1.0` (executable `wt`)
